fixed the logout functinality for manager page

--- a/pages/manager.html
+++ b/pages/manager.html
@@ -25,9 +25,9 @@
             <span id="userEmail" class="badge"></span>
             <button
               class="btn btn-danger btn-sm"
-              onclick="SessionManager.logout()"
+              onclick="ManagerDashboard.logout()"
             >
-              Logout
+              <i class="fas fa-sign-out-alt"></i> Logout
             </button>
           </div>
         </div>
@@ -182,7 +182,6 @@
         </div>
       </div>
     </div>
-
     <script src="../js/manager.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", async () => {
