--- a/pages/login.html
+++ b/pages/login.html
@@ -31,7 +31,7 @@
                 <label class="form-label" for="password">Password</label>
                 <div class="relative">
                     <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
-                    <i class="fas fa-lock absolute right-3 top-3 text-gray-400"></i>
+                    <i class="fas fa-eye absolute right-3 top-3 text-gray-400 cursor-pointer" onclick="togglePassword('password')"></i>
                 </div>
             </div>
             
@@ -62,6 +62,18 @@
                 handleLogin();
             }
         });
+        
+        function togglePassword(id) {
+            const input = document.getElementById(id);
+            const icon = input.nextElementSibling;
+            if (input.type === 'password') {
+                input.type = 'text';
+                icon.className = 'fas fa-eye-slash absolute right-3 top-3 text-gray-400 cursor-pointer';
+            } else {
+                input.type = 'password';
+                icon.className = 'fas fa-eye absolute right-3 top-3 text-gray-400 cursor-pointer';
+            }
+        }
     </script>
 </body>
 </html>
