--- a/pages/signup.html
+++ b/pages/signup.html
@@ -31,7 +31,7 @@
                 <label class="form-label" for="signupPassword">Password</label>
                 <div class="relative">
                     <input type="password" id="signupPassword" class="form-control" placeholder="Minimum 6 characters" required minlength="6">
-                    <i class="fas fa-lock absolute right-3 top-3 text-gray-400"></i>
+                    <i class="fas fa-eye absolute right-3 top-3 text-gray-400 cursor-pointer" onclick="togglePassword('signupPassword')"></i>
                 </div>
                 <p class="text-xs text-gray-500 mt-1">Password must be at least 6 characters long</p>
             </div>
@@ -74,6 +74,18 @@
                 handleSignup();
             }
         });
+        
+        function togglePassword(id) {
+            const input = document.getElementById(id);
+            const icon = input.nextElementSibling;
+            if (input.type === 'password') {
+                input.type = 'text';
+                icon.className = 'fas fa-eye-slash absolute right-3 top-3 text-gray-400 cursor-pointer';
+            } else {
+                input.type = 'password';
+                icon.className = 'fas fa-eye absolute right-3 top-3 text-gray-400 cursor-pointer';
+            }
+        }
     </script>
 </body>
 </html>
