adding functionality and additional features

--- a/pages/login.html
+++ b/pages/login.html
@@ -67,36 +67,37 @@
     </div>
     <script src="../js/auth.js"></script>
 
-    <script>
-      function handleLogin() {
-        const email = document.getElementById("email").value;
-        const password = document.getElementById("password").value;
+<script>
+  function handleLogin() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+    
+    // AuthService is defined in auth.js
+    if (typeof AuthService !== 'undefined') {
         AuthService.login(email, password);
-      }
+    } else {
+        console.error("AuthService not loaded. Check your file paths!");
+    }
+  }
 
-      // Allow Enter key to submit form
-      document
-        .getElementById("loginForm")
-        .addEventListener("keypress", function (e) {
-          if (e.key === "Enter") {
-            handleLogin();
-          }
-        });
-      const API_BASE = "http://localhost/taxi_service/api";
+  function togglePassword(id) {
+    const input = document.getElementById(id);
+    const icon = input.nextElementSibling;
+    if (input.type === "password") {
+      input.type = "text";
+      icon.className = "fas fa-eye-slash absolute right-3 top-3 text-gray-400 cursor-pointer";
+    } else {
+      input.type = "password";
+      icon.className = "fas fa-eye absolute right-3 top-3 text-gray-400 cursor-pointer";
+    }
+  }
 
-      function togglePassword(id) {
-        const input = document.getElementById(id);
-        const icon = input.nextElementSibling;
-        if (input.type === "password") {
-          input.type = "text";
-          icon.className =
-            "fas fa-eye-slash absolute right-3 top-3 text-gray-400 cursor-pointer";
-        } else {
-          input.type = "password";
-          icon.className =
-            "fas fa-eye absolute right-3 top-3 text-gray-400 cursor-pointer";
-        }
-      }
-    </script>
+  // Allow Enter key to submit form
+  document.getElementById("loginForm").addEventListener("keypress", function (e) {
+    if (e.key === "Enter") {
+      handleLogin();
+    }
+  });
+</script>
   </body>
 </html>
