--- a/pages/signup.html
+++ b/pages/signup.html
@@ -41,7 +41,6 @@
                 <select id="signupRole" class="form-control" required>
                     <option value="Customer">Tourist (Customer)</option>
                     <option value="Manager">Taxi Manager</option>
-                    <option value="Admin">Administrator</option>
                 </select>
             </div>
             
@@ -58,7 +57,7 @@
         </form>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script src="../js/auth.js"></script>
     <script>
         function handleSignup() {
             const email = document.getElementById('signupEmail').value;
